# has-udd

./: .gitignore  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.claude/skills/: brainstorm  ddd-advisor  mermaid-guide  platform-advisor  scrum-knowledge  skills-creator  tech-lead-advisor  ux-advisor
.has-udd/coding/: coding-standard-python-hexagonal.md  python-hexagonal.html  stack.html
.has-udd/specs/: agg-document.md  agg-schema.md  bc-has-udd-engines.html  bc-has-udd-engines.md  dm-document.feature  dm-document.html  dm-schema.feature  dm-schema.html  sd-harness-core.md  sd-rendering.md  sd-validation.md  uc-lint-doc-comment.feature  uc-lint-doc-comment.md  uc-query-document.feature  uc-query-document.html  uc-render-document.feature  uc-render-document.html  uc-scaffold-document.feature  uc-scaffold-document.html  uc-scan-source-code.md  uc-validate-document.feature  uc-validate-document.html
backlog/: config.yml
docs/: README.md  SESSION-HANDOFF-coding-schema.md  SESSION-HANDOFF.md
docs/brainstorm/: brainstorm-agent-schema-harness-agent.md  brainstorm-ai-era-detail-design.md  brainstorm-coding-schema-redefine.md  brainstorm-coding-schema.md  brainstorm-coding-skill-schema-thinness.md  brainstorm-context-observability.md  brainstorm-ddd-knowledge-skill.md  brainstorm-doc-comment-schema.md  brainstorm-has-udd-concept.md  brainstorm-has-udd-design.md  brainstorm-has-udd-oss-separation.md  brainstorm-has-udd-role-agent-rethink.md  brainstorm-loomdb-has-udd-document-db.md  brainstorm-minimum-sample.md  brainstorm-multi-tool-compatibility.md  brainstorm-native-test-generation.md  brainstorm-okf-frontmatter-relations.md  brainstorm-okf-has-udd.md  brainstorm-platform-engineering-application.md  brainstorm-platform-spec-design.md  brainstorm-presentation-spec-schema.md  brainstorm-schema-aggregate-zerobase.md  brainstorm-schema-versioning-migration.md  brainstorm-spec-code-semantic-drift.md  brainstorm-spec-feature-execution-binding.md  brainstorm-spec-folder-structure.md  brainstorm-stage-b-conformance.md  brainstorm-tasklist.md  brainstorm-ux-advisor-design.md  brainstorm-waffle-next-evolution.md  design-coding-schema.md  design-engine-knowledge.md  design-engine-query.md  design-engine-render-okf.md  design-engine-render.md  design-engine-scaffold.md  design-engine-set.md  design-hooks.md  design-implementation-architecture.md  design-loomdb-document-conversion-poc.md  (+6 more)
docs/design/: coding-architecture-blocks-filled.md  coding-render-image-architecture.md  coding-render-image-coding-standard.md  coding-schema-sequence.md  (+9 more)
examples/python-hexagonal/: pyproject.toml
examples/python-hexagonal/src/example_hex/: __init__.py
examples/python-hexagonal/src/example_hex/adapters/: __init__.py
examples/python-hexagonal/src/example_hex/adapters/inbound/: __init__.py  cli.py
examples/python-hexagonal/src/example_hex/adapters/outbound/: __init__.py  in_memory_sample_repository.py  system_clock.py
examples/python-hexagonal/src/example_hex/application/: __init__.py
examples/python-hexagonal/src/example_hex/application/ports/: __init__.py  clock_port.py  sample_repository_port.py
examples/python-hexagonal/src/example_hex/application/usecases/: __init__.py  do_something.py
examples/python-hexagonal/src/example_hex/domain/: __init__.py
examples/python-hexagonal/src/example_hex/domain/model/: __init__.py  sample_aggregate.py  sample_item.py  sample_name.py
examples/python-hexagonal/src/example_hex/domain/services/: __init__.py  sample_domain_service.py
examples/python-hexagonal/src/example_hex/shared/: __init__.py  result.py
examples/python-hexagonal/tests/: __init__.py
examples/python-hexagonal/tests/application/: __init__.py  test_do_something.py
examples/python-hexagonal/tests/domain/: __init__.py  test_sample_aggregate.py
features/: cli.feature  mcp.feature  render.feature  validate.feature
loomdb/: .gitignore  CLAUDE.md  Cargo.toml  README.md
loomdb/.github/workflows/: ci.yml
loomdb/crates/loom-bridge/: Cargo.toml
loomdb/crates/loom-bridge/src/: lib.rs  value.rs
loomdb/crates/loom-bridge/tests/: bridge.rs
loomdb/crates/loom-cli/: Cargo.toml
loomdb/crates/loom-cli/src/: main.rs
loomdb/crates/loom-core/: Cargo.toml
loomdb/crates/loom-core/src/: lib.rs
loomdb/crates/loom-core/src/application/: meta.rs  mod.rs
loomdb/crates/loom-core/src/application/usecases/: batch_write.rs  create_table.rs  delete_item.rs  delete_table.rs  describe_table.rs  format.rs  get_item.rs  list_tables.rs  mod.rs  put_item.rs  query.rs  scan.rs  stats.rs  sweep_expired.rs  transact_get.rs  transact_write.rs  update_item.rs  update_table.rs
loomdb/crates/loom-core/src/domain/: attribute.rs  error.rs  index.rs  key.rs  key_codec.rs  mod.rs  number.rs  table.rs  ttl.rs
loomdb/crates/loom-core/src/domain/expr/: ast.rs  eval.rs  key.rs  mod.rs  parser.rs  projection.rs  update.rs
loomdb/crates/loom-core/src/ports/: mod.rs  storage.rs
loomdb/crates/loom-core/tests/: conditional_write.rs  expr_condition.rs  expr_update.rs  indexes.rs  key_codec.rs  ops.rs  projection.rs  query_scan.rs  sets.rs  table_ops.rs  transact_batch.rs  ttl.rs  update_write.rs  usecases.rs
loomdb/crates/loom-node/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
loomdb/crates/loom-node/src/: lib.rs
loomdb/crates/loom-node/test/: basic.test.mjs  types.test.mts
loomdb/crates/loom-py/: Cargo.toml
loomdb/crates/loom-py/src/: lib.rs
loomdb/crates/loom-py/tests/: test_basic.py
loomdb/crates/loom-query/: Cargo.toml
loomdb/crates/loom-query/src/: exec.rs  lib.rs
loomdb/crates/loom-query/tests/: join.rs
loomdb/crates/loom-redb/: Cargo.toml
loomdb/crates/loom-redb/src/: lib.rs
loomdb/crates/loom-redb/tests/: contract.rs
loomdb/crates/loom-testkit/: Cargo.toml
loomdb/crates/loom-testkit/src/: contract.rs  in_memory.rs  lib.rs
loomdb/crates/loom-testkit/tests/: contract_in_memory.rs
loomdb/docs/: 00-feasibility.md  01-spec.md  02-tech-stack.md  03-architecture.md  05-test-standard.md  06-test-plan.md
tests/: test_part_renderer.py
(+88 files in other folders)
