[project]
name = "has-udd"
version = "0.0.1"
description = "Harness Agentic Scrum Usecase-Driven-Development"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4",
    "typer>=0.12",
    "fastmcp>=2",
]

[dependency-groups]
dev = ["pytest>=8", "behave>=1.2.6"]

[project.scripts]
has-udd = "has_udd.adapters.inbound.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/has_udd"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
