[workspace]
resolver = "2"
members = [
    "crates/loom-core",
    "crates/loom-redb",
    "crates/loom-query",
    "crates/loom-cli",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"          # TODO: 確定後に見直し
repository = "https://github.com/daidaiiro-519/loomdb"

[workspace.dependencies]
# 中核（tech-stack §2）
redb = "2"
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
thiserror = "1"
# ワークスペース内 crate
loom-core = { path = "crates/loom-core" }
loom-redb = { path = "crates/loom-redb" }
loom-query = { path = "crates/loom-query" }

# サイズ最優先（tech-stack §5）
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
