[workspace]
resolver = "2"
members = [
    "crates/loom-core",
    "crates/loom-redb",
    "crates/loom-query",
    "crates/loom-bridge",
    "crates/loom-cli",
    "crates/loom-testkit",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/daidaiiro-519/loomdb"

[workspace.dependencies]
# 中核（tech-stack §2）
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
thiserror = "1"
# テスト専用（dev-dependencies でのみ使用・配布サイズに影響しない）
proptest = "1"
tempfile = "3"
# ワークスペース内 crate
loom-core = { path = "crates/loom-core" }
loom-redb = { path = "crates/loom-redb" }
loom-query = { path = "crates/loom-query" }
loom-bridge = { path = "crates/loom-bridge" }
loom-testkit = { path = "crates/loom-testkit" }

# サイズ最優先（tech-stack §5）
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
