[project]
name = "example-hex"
version = "0.1.0"
description = "python-hexagonal コーディング規約の概念網羅サンプル"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "jsonschema>=4",
]

[project.scripts]
example-hex = "example_hex.adapters.inbound.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/example_hex"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
