[package]
name = "loom-bridge"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LoomDB JSON API bridge shared by language bindings (loom-node / loom-py) and the wire layer."

[dependencies]
loom-core.workspace = true
loom-query.workspace = true
serde_json.workspace = true

[dev-dependencies]
loom-testkit.workspace = true
