[package]
name = "loom-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "LoomDB demo CLI: exercises core + redb end-to-end (put/get)."

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
loom-core.workspace = true
loom-redb.workspace = true
loom-query.workspace = true
