[package]
name = "loom-py"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "LoomDB Python binding (PyO3 shell over loom-bridge). Published to PyPI as \"loomdb\"."

[lib]
name = "loom_py"
crate-type = ["cdylib"]
# pyo3 の extension-module は Rust テストバイナリに libpython をリンクできない
# (PyO3 FAQ 既知問題)。この crate の検証は tests/test_basic.py(Python 側)で行う。
test = false
doctest = false

[dependencies]
loom-bridge.workspace = true
loom-core.workspace = true
loom-redb.workspace = true
serde_json.workspace = true
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
